@@ -128,6 +128,9 @@ Core and builtins
 Library
 -------
 
+- Patch #1517891: Mode 'a' for ZipFile now creates the file if it
+  doesn't exist.
+
 - Patch #698833: Support file decryption in zipfile.
 
 - Patch #685268: Consider a package's __path__ in imputil.
